added actions on users company page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern=/static/**
 spring.mustache.suffix=.html
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=e@gmail.com
+spring.mail.password=pass
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#jobs.host.url=http://localhost:8080
+
 
