added send mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ server.servlet.session.timeout=15m
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 
-# DATABASE CONFIG
 spring.datasource.url=jdbc:postgresql://localhost:5432/jobs
 spring.datasource.username=jobs
 spring.datasource.password=jobs
@@ -14,11 +13,6 @@ spring.mustache.suffix=.html
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=e@gmail.com
-spring.mail.password=pass
+spring.config.import=mail-config.properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-#jobs.host.url=http://localhost:8080
-
-
