refactoring + added announcement info page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
+
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=1
+logging.level.org.hibernate.SQL_SLOW.level=INFO
